# vala-time-tracker

./: .gitignore  AppStatusIcon.vala  DateCellRenderer.vala  MainApp.vala  MainModel.vala  MainView.vala  README.md  TreeViewSample.vala  Utils.vala  build-distro.sh  copy-dlls.sh  copy-icons.sh  determineDepDlls.sh  icon-patterns.txt  meson.build  prepare-settings.sh  required-dlls.txt  uncrustify.cfg
src/: DateCellRenderer.vala  DummyApp.vala  MainApp.vala  MainModel.vala  MainView.vala  TrackerTab.vala  Utils.vala
